--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>   </h1>
         <div class="card">
-            <img src="image-qr-code.png" alt="QR-Code">
+            <img src="images/image-qr-code.png" alt="QR-Code">
             <div class="text">
                 <h2>Improve your front-end skills by building projects</h2>
                 <p> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
